--- a/shopping-api/src/main/resources/application.properties
+++ b/shopping-api/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=shopping-api
+
+## Application port
+server.port=8082
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+## Default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev
+spring.datasource.username=postgres
+spring.datasource.password=Postgresql!161
+
+spring.jpa.show-sql=true
+
+
+## Default schema
+spring.flyway.schemas=shopping
+spring.jpa.properties.hibernate.default_schema=shopping
+
+# Configurações do Flyway
+spring.flyway.enabled=true
+# Verifique se o caminho para os scripts está correto
+spring.flyway.locations=classpath:db/migration
+
